infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: shirinblog.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 4000
            path: /api/users/(.*)
